# ai-palindromikisa

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmark_logs/: 2025-11-16-anthropic-claude-haiku-4-5-20251001.yaml  2025-11-16-anthropic-claude-sonnet-4-5.yaml  2025-11-16-gemini-2.0-flash.yaml  2025-11-16-gemini-gemini-2.0-flash.yaml  2025-11-16-gemini-gemini-2.5-flash.yaml  2025-11-16-gemini-gemini-2.5-pro.yaml  2025-11-16-openrouter-moonshotai-kimi-k2-thinking.yaml  2025-11-16-openrouter-openai-gpt-5.1.yaml  2025-11-16-openrouter-z-ai-glm-4.6.yaml  2025-11-17-openrouter-mistralai-magistral-medium-2506.yaml  2025-11-17-openrouter-mistralai-mistral-large-2411.yaml  2025-11-17-openrouter-x-ai-grok-4.yaml  2025-11-25-anthropic-claude-haiku-4-5-20251001-1.yaml  2025-11-25-anthropic-claude-haiku-4-5-20251001.yaml  2025-11-25-anthropic-claude-sonnet-4-5-1.yaml  2025-11-25-anthropic-claude-sonnet-4-5.yaml  2025-11-25-gemini-gemini-2.0-flash-1.yaml  2025-11-25-gemini-gemini-2.0-flash.yaml  2025-11-25-gemini-gemini-2.5-flash.yaml  2025-11-25-gemini-gemini-2.5-pro-1.yaml  2025-11-25-gemini-gemini-2.5-pro.yaml  2025-11-25-gpt-4o-mini.yaml  2025-11-25-openrouter-mistralai-mistral-small-3.1-24b-instruct.yaml  2025-11-25-openrouter-moonshotai-kimi-k2-thinking.yaml  2025-11-25-openrouter-openai-gpt-5.1.yaml  2025-11-25-openrouter-x-ai-grok-4-1.yaml  2025-11-25-openrouter-x-ai-grok-4.yaml  2025-11-25-openrouter-z-ai-glm-4.6.yaml  2025-11-26-anthropic-claude-3-opus-20240229-1.yaml  2025-11-26-anthropic-claude-3-opus-20240229.yaml  2025-11-26-anthropic-claude-haiku-4-5-20251001-1.yaml  2025-11-26-anthropic-claude-haiku-4-5-20251001.yaml  2025-11-26-anthropic-claude-sonnet-4-5-1.yaml  2025-11-26-anthropic-claude-sonnet-4-5.yaml  2025-11-26-gemini-gemini-2.0-flash.yaml  2025-11-26-gemini-gemini-2.5-flash-1.yaml  2025-11-26-gemini-gemini-2.5-flash.yaml  2025-11-26-gemini-gemini-2.5-pro.yaml  2025-11-26-gpt-4o-mini.yaml  2025-11-26-openrouter-anthropic-claude-opus-4.5-1.yaml  (+57 more)
docs/: benchmark-log-format.md
models/: README.md  anthropic-claude-3-opus-20240229-1.yaml  anthropic-claude-3-opus-20240229.yaml  anthropic-claude-haiku-4-5-20251001-1.yaml  anthropic-claude-opus-4-5-20251101-t0-th1-tb32000.yaml  anthropic-claude-opus-4-5-20251101-t0.yaml  anthropic-claude-opus-4-5-20251101-t095.yaml  anthropic-claude-opus-4-5-20251101-t1-th1-tb32000.yaml  anthropic-claude-opus-4-5-20251101-t1.yaml  anthropic-claude-sonnet-4-5-1.yaml  anthropic-claude-sonnet-4-5.yaml  gemini-gemini-2.0-flash-1.yaml  gemini-gemini-2.0-flash.yaml  gemini-gemini-2.5-flash.yaml  gemini-gemini-2.5-pro.yaml  gemini-gemini-3-pro-preview-t1.yaml  gemini-gemini-3-pro-preview-t14.yaml  gemini-gemini-3-pro-preview-t15-tllow.yaml  gemini-gemini-3-pro-preview-t15.yaml  gemini-gemini-3-pro-preview-t16.yaml  gemini-gemini-3-pro-preview-t18.yaml  gemini-gemini-3-pro-preview-t2-tllow.yaml  gpt-4o-mini-1.yaml  gpt-4o-mini.yaml  openrouter-anthropic-claude-opus-4.5-1.yaml  openrouter-anthropic-claude-opus-4.5-t0.yaml  openrouter-anthropic-claude-opus-4.5-t05.yaml  openrouter-anthropic-claude-opus-4.5.yaml  openrouter-google-gemini-3-pro-preview-t05.yaml  (+9 more)
tests/: __init__.py  (+9 more)
(+26 files in other folders)
