[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai-palindromikisa"
version = "0.1.0"
description = "AI Palindrome Benchmark - evaluating LLM capability for creating palindromes"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "llm",
    "llm-anthropic",
    "llm-gemini",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
benchmark = "ai_palindromikisa.benchmark:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
